updated Italian translation

--- a/po/wesnoth-help/it.po
+++ b/po/wesnoth-help/it.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:45+0100\n"
-"PO-Revision-Date: 2012-01-21 23:35+0100\n"
-"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-01-22 17:06+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -190,7 +190,6 @@ msgstr "Nido"
 
 #. [topic]: id=aerie
 #: data/core/encyclopedia/drakes.cfg:14
-#, fuzzy
 msgid ""
 "A very large castle-like structure that is home to a <ref>dst='flight' "
 "text='flight'</ref>. It contains the <ref>dst='breeding_pen' text='breeding "
@@ -206,14 +205,13 @@ msgstr "Recinto di riproduzione"
 
 #. [topic]: id=breeding_pen
 #: data/core/encyclopedia/drakes.cfg:20
-#, fuzzy
 msgid ""
 "The portion of an <ref>dst='aerie' text='aerie'</ref> where the nonsentient "
 "<ref>dst='breeder' text='Breeders'</ref> live under the <ref>dst='dominant' "
 "text='Dominant'</ref>’s eye."
 msgstr ""
 "La porzione di un <ref>dst='aerie' text='nido'</ref> dove le non-senzienti "
-"vivono sotto l’occhio del the <ref>dst='dominant' text='dominante'</ref>."
+"vivono sotto l’occhio del <ref>dst='dominant' text='dominante'</ref>."
 
 #. [topic]: id=breeding_cycle
 #: data/core/encyclopedia/drakes.cfg:25
@@ -222,7 +220,6 @@ msgstr "Ciclo riproduttivo"
 
 #. [topic]: id=breeding_cycle
 #: data/core/encyclopedia/drakes.cfg:26
-#, fuzzy
 msgid ""
 "The time that passes between one <ref>dst=egg text='egg'</ref> laying to the "
 "next."
@@ -253,13 +250,12 @@ msgstr "Nuovo Continente "
 
 #. [topic]: id=new_continent
 #: data/core/encyclopedia/drakes.cfg:38
-#, fuzzy
 msgid ""
 "The great continent to the east of <ref>dst='morogor' text='Morogor'</ref>. "
 "Its existence is unknown to the drakes until the flight of Galun."
 msgstr ""
 "Il grande continente a est di <ref>dst='morogor' text='Morogor'</ref>. La "
-"sua esistenza è sconosciuta ai draghi prima che migrano da Galun."
+"sua esistenza è sconosciuta ai draghi prima della missione di Galun."
 
 #. [topic]: id=abyss
 #: data/core/encyclopedia/drakes.cfg:43
@@ -282,7 +278,6 @@ msgstr "La Strada a Spirale"
 
 #. [topic]: id=spiral_path
 #: data/core/encyclopedia/drakes.cfg:50
-#, fuzzy
 msgid ""
 "A quasi-secret organization among the drakes devoted to avoiding a "
 "Malthusian final war. See also <ref>dst='straight_path' text='Straight "
@@ -298,7 +293,6 @@ msgstr "La Strada Dritta"
 
 #. [topic]: id=straight_path
 #: data/core/encyclopedia/drakes.cfg:56
-#, fuzzy
 msgid ""
 "The drakish tradition of perpetual expansion and conquest. This term is "
 "mostly used by the members of the <ref>dst='spiral_path' text='Spiral Path'</"
@@ -329,7 +323,6 @@ msgstr "Vulcaniade"
 
 #. [topic]: id=vulcaniad
 #: data/core/encyclopedia/drakes.cfg:68
-#, fuzzy
 msgid ""
 "The (irregular) period between consecutive eruptions of "
 "<ref>dst='mount_morogor' text='Mount Morogor'</ref>. The "
@@ -381,7 +374,6 @@ msgstr "Nidiaceo"
 
 #. [topic]: id=hatchling
 #: data/core/encyclopedia/drakes.cfg:92
-#, fuzzy
 msgid ""
 "A young drake that has not yet seen another generation hatch. The younger of "
 "the current generation of hatchlings are the most aggressive is the behavior "
@@ -442,15 +434,14 @@ msgstr "Stormo"
 
 #. [topic]: id=flight
 #: data/core/encyclopedia/drakes.cfg:116
-#, fuzzy
 msgid ""
 "Tribe of Drakes, lives in an <ref>dst='aerie' text='Aerie'</ref>, "
 "controlling a hunting range. Each tribe has one <ref>dst='dominant' "
 "text='Dominant'</ref>, who confers mating privileges."
 msgstr ""
-"Le tribù dei draghi vivono nei <ref>dst='aerie' text='nidi'</ref> e "
-"controllano una zona da caccia. Ogni tribù ha un <ref>dst='dominant' "
-"text='dominante'</ref>, il quale detiene il privilegio per l'accoppiamento."
+"Tribù di draghi, vivono nei <ref>dst='aerie' text='nidi'</ref> e controllano "
+"una zona da caccia. Ogni tribù ha un <ref>dst='dominant' text='dominante'</"
+"ref>, il quale detiene il privilegio dell'accoppiamento."
 
 #. [topic]: id=aspirant
 #: data/core/encyclopedia/drakes.cfg:121
@@ -553,7 +544,6 @@ msgstr ""
 
 #. [topic]: id=long_count
 #: data/core/encyclopedia/drakes.cfg:163
-#, fuzzy
 msgid "Long Count"
 msgstr "Lunga Conta"
 
@@ -573,7 +563,6 @@ msgstr "Maiale alto"
 
 #. [topic]: id=long_pig
 #: data/core/encyclopedia/drakes.cfg:170
-#, fuzzy
 msgid ""
 "South Seas pidgin for human meat, used to translate a Drakish word with the "
 "same meaning."
@@ -732,7 +721,6 @@ msgstr "Irdya"
 
 #. [topic]: id=irdya
 #: data/core/encyclopedia/geography.cfg:64
-#, fuzzy
 msgid ""
 "The name of the world in which the kingdom of <ref>dst='kingdom_wesnoth' "
 "text='Wesnoth'</ref> is situated is ‘Irdya’. This term is, however, only "
@@ -740,10 +728,10 @@ msgid ""
 "“the world” or, poetically, “the wide green world”."
 msgstr ""
 "Il nome del mondo in cui si trova il regno di <ref>dst='kingdom_wesnoth' "
-"text='Wesnoth'</ref> è chiamato ''Irdya''. Questo termine, comunque, è "
+"text='Wesnoth'</ref> è chiamato “Irdya”. Questo termine, comunque, è "
 "raramente usato nell'era descritta dalla mappa principale. Le persone "
-"normalmente preferiscono dire ''il mondo'' oppure, in maniera poetica, ''il "
-"grande mondo verde''."
+"normalmente preferiscono dire “il mondo” oppure, in maniera poetica, “il "
+"grande mondo verde”."
 
 #. [topic]: id=kingdom_wesnoth
 #: data/core/encyclopedia/geography.cfg:69
@@ -2457,17 +2445,16 @@ msgstr "Selvatico"
 
 #. [topic]: id=traits_feral
 #: data/core/help.cfg:401
-#, fuzzy
 msgid ""
 "Dwellings of sentient beings are not easily used for cover by feral "
 "creatures of low intelligence. As a result, <italic>text='feral'</italic> "
 "units receive a maximum of 50% defense in any land-based village regardless "
 "of base terrain."
 msgstr ""
-"Le dimore delle creature senzienti non sono facimente usate per ospitare le "
+"Le dimore delle creature senzienti non sono facilmente usate per ospitare le "
 "creature selvatiche poco intelligenti. Di conseguenza, le unità "
 "<italic>text='selvatiche'</italic> ricevono massimo 50% di difesa in ogni "
-"villaggio fondato sulla terra incurante del tipo di terreno."
+"villaggio fondato sulla terra a prescindere dal tipo di terreno."
 
 #. [topic]: id=traits_loyal
 #: data/core/help.cfg:406
@@ -2541,7 +2528,7 @@ msgstr ""
 #. [topic]: id=traits_mechanical
 #: data/core/help.cfg:422
 msgid "trait^Mechanical"
-msgstr "Meccanica"
+msgstr "Meccanico"
 
 #. [topic]: id=traits_mechanical
 #: data/core/help.cfg:423
@@ -4233,7 +4220,6 @@ msgstr "Bonus PF Massimo +3, Max XP +20%"
 
 #. [time]: id=indoors
 #: data/core/macros/schedules.cfg:70
-#, fuzzy
 msgid "Indoors"
 msgstr "Case"
 
@@ -4743,7 +4729,7 @@ msgstr "debole"
 #. [trait]: id=slow
 #: data/core/macros/traits.cfg:226
 msgid "slow"
-msgstr "lenta"
+msgstr "lento"
 
 #. [trait]: id=slow
 #: data/core/macros/traits.cfg:227
@@ -4753,12 +4739,12 @@ msgstr "lenta"
 #. [trait]: id=dim
 #: data/core/macros/traits.cfg:243
 msgid "dim"
-msgstr "scuro"
+msgstr "ottuso"
 
 #. [trait]: id=dim
 #: data/core/macros/traits.cfg:244
 msgid "female^dim"
-msgstr "scura"
+msgstr "ottusa"
 
 #. [trait]: id=aged
 #: data/core/macros/traits.cfg:256
@@ -5345,7 +5331,6 @@ msgstr "Ogri"
 
 #. [race]: id=ogre
 #: data/core/units.cfg:244
-#, fuzzy
 msgid ""
 "Ogres are a wild and uncivilized race who dwell mainly in the wilderness of "
 "the Great Continent. Physically, they resemble humans and orcs but are "
@@ -5362,21 +5347,22 @@ msgid ""
 "is a sign of cooperation, domestication, or simply mutual opportunism is not "
 "known."
 msgstr ""
-"Gli ogri sono una razza selvaggia e incivile che abita principalmente nei "
+"Gli ogre sono una razza selvaggia e incivile che abita principalmente nei "
 "deserti del Grande Continente. Fisicamente, assomigliano agli umani e agli "
 "orchi ma sono più grossi e più forti. Persino i giovani riescono a superare "
 "in combattimento la maggior parte degli uomini. Gli ogre non amano vivere "
-"nelle aree popolate e di solito evitano oppure vannoa fare parte "
-"nell'esercito. Invece, si nascondono tra le montagne ai bordi della civiltà, "
-"dove gli affamati banditi ogre provvedono una costante minaccia per i "
-"viaggiatori e per le caravane. Anche se gli ogre non sono particolarmente "
+"nelle aree popolate e di solito o le evitano oppure ne vengono scacciati a "
+"forza. Preferiscono invece nascondersi nelle zone montagnose ai bordi della "
+"civiltà, dove gli affamati banditi ogre minacciano costantemente i "
+"viaggiatori le carovane. Anche se gli ogre non sono particolarmente "
 "intelligenti o veloci, la loro resistenza e la loro forza fisica li rende "
-"delle valide risorse negli eserciti delle altre razze. They are especially "
-"valued by more ruthless commanders who don't mind the ogres' brutality. "
-"Little is known about their biology or society, if they can truly be said to "
-"have one, but they are said to attack alongside wolves and other beasts. "
-"Whether this is a sign of cooperation, domestication, or simply mutual "
-"opportunism is not known."
+"delle valide risorse negli eserciti delle altre razze. Sono apprezzatti in "
+"special modo dai comandanti più spietati che non si curano della brutalità "
+"degli ogre. Si conosce poco della loro biologia e della loro struttura "
+"sociale, se mai possa dire che ne abbiano una, ma si dice che siano soliti "
+"attaccare fianco a fianco dei lupi e di altre bestie. Nulla è noto sul fatto "
+"che questo sia un segno di cooperazione, addomesticamento o semplicemente "
+"mutuo opportunismo."
 
 #. [race]: id=orc
 #: data/core/units.cfg:252
@@ -5677,7 +5663,7 @@ msgstr "Lupo"
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:311
 msgid "race+female^Wolf"
-msgstr "Lupo"
+msgstr "Lupa"
 
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:312
