--- a/po/wesnoth-tutorial/it.po
+++ b/po/wesnoth-tutorial/it.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-17 22:09+0100\n"
-"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-01-22 15:16+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -206,7 +206,7 @@ msgstr "Uhm, vediamo..."
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:328
 msgid "Have you found an orc for me to fight, huh? A troll?"
-msgstr "Be’ hai trovato un orco da farmi combattere? Oppure un troll?"
+msgstr "Beh, hai trovato un orco da farmi combattere? Oppure un troll?"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:332
@@ -1050,7 +1050,7 @@ msgid ""
 "the river. He should be little trouble."
 msgstr ""
 "Per prima cosa dovremo affrontare la recluta di orco che si trova in mezzo "
-"al fiume. Dovrebbe essere un problema trascurabile."
+"al fiume. Dovrebbe essere un problema di facile soluzione."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:491
@@ -1917,7 +1917,7 @@ msgstr ""
 "L’avanzamento di un livello mi ha guarito completamente!\n"
 "Ho sempre una possibilità del 60% di fare centro con la mia abilità di "
 "<i>tiratore scelto</i> e causerò 9 punti ferita per ognuno dei quattro "
-"attacchi. Utilizzami per abbattere le unità più difficili da abbattere."
+"attacchi. Utilizzami per eliminare le unità più difficili da abbattere."
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1507
@@ -1926,10 +1926,10 @@ msgid ""
 "I always have a 60% chance of hitting with my <i>Marksman</i> ability, and I "
 "deal 9 damage each for 4 attacks. Use me to dislodge hard-to-hit units."
 msgstr ""
-"L’avanzamento di un livello mi ha guarito completamente!\n"
+"L’avanzamento di un livello mi ha guarita completamente!\n"
 "Ho sempre una possibilità del 60% di fare centro con la mia abilità di "
 "<i>tiratrice scelta</i> e causerò 9 punti ferita per ognuno dei quattro "
-"attacchi. Utilizzami per abbattere le unità più difficili da abbattere."
+"attacchi. Utilizzami per eliminare le unità più difficili da abbattere."
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1523
