updated Italian translation

--- a/po/wesnoth-manual/it.po
+++ b/po/wesnoth-manual/it.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "POT-Creation-Date: 2012-01-21 01:45+0100\n"
-"PO-Revision-Date: 2012-01-21 23:44+0100\n"
+"PO-Revision-Date: 2012-01-26 16:52+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -1857,9 +1857,8 @@ msgstr "i"
 # Non so a cosa si riferisce....
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1047
-#, fuzzy
 msgid "Suppose dead"
-msgstr "Suppose dead"
+msgstr "Considera morto"
 
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1057
